[Change] エラーページ変更

--- a/web_rails/myapp/public/500.html
+++ b/web_rails/myapp/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -32,12 +32,13 @@
   }
 
   .rails-default-error-page h1 {
-    font-size: 100%;
+    font-size: 400%;
     color: #730E15;
     line-height: 1.5em;
   }
 
   .rails-default-error-page div.dialog > p {
+    font-size: 200%;
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -58,9 +59,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>404</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>このページは表示できません:(</p>
   </div>
 </body>
 </html>
