--- a/web_rails/myapp/public/404.html
+++ b/web_rails/myapp/public/404.html
@@ -32,12 +32,13 @@
   }
 
   .rails-default-error-page h1 {
-    font-size: 100%;
+    font-size: 400%;
     color: #730E15;
     line-height: 1.5em;
   }
 
   .rails-default-error-page div.dialog > p {
+    font-size: 200%;
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -58,10 +59,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>404</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>このページは表示できません:(</p>
   </div>
 </body>
 </html>
